@@ -29,6 +29,8 @@ import java.awt.geom.Dimension2D;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.Collections;
@@ -271,9 +273,9 @@ public final class TestPictures {
     @Test
     @Disabled("requires an internet connection to a 3rd party site")
     // As of 2017-06-20, the file still exists at the specified URL and the test passes.
-    void testZeroPictureLength() throws IOException {
+    void testZeroPictureLength() throws IOException, URISyntaxException {
         // take the data from www instead of test directory
-        URL url = new URL("http://www.cs.sfu.ca/~anoop/courses/CMPT-882-Fall-2002/chris.ppt");
+        URL url = new URI("http://www.cs.sfu.ca/~anoop/courses/CMPT-882-Fall-2002/chris.ppt").toURL();
         HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(url.openStream());
         /* Assume that the file could retrieved...
         InputStream is;
